Update revised code