@@ -58,9 +58,9 @@ public class Vet extends Person {
 
 	@XmlElement
 	public List<Specialty> getSpecialties() {
-		return getSpecialtiesInternal().stream()
-			.sorted(Comparator.comparing(NamedEntity::getName))
-			.collect(Collectors.toList());
+    return getSpecialtiesInternal().stream()
+        .sorted(Comparator.comparing(NamedEntity::getName))
+        .toList(); 
 	}
 
 	public int getNrOfSpecialties() {
